--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.home-page {
+.home-page{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,7 +6,16 @@
   background-color: #ffffff;
 }
 
-.home-page .navigation {
+.about-page {
+  display: flex;
+  flex-direction: column;
+  height: 965px;
+  align-items: center;
+  position: relative;
+  background-color: #ffffff;
+}
+
+.navigation {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -20,7 +29,7 @@
   background-color: #ffffff;
 }
 
-.home-page .text-wrapper {
+.text-wrapper {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -34,7 +43,7 @@
   font-style: var(--subtitle-font-style);
 }
 
-.home-page .menu-items {
+.menu-items {
   display: inline-flex;
   align-items: flex-start;
   justify-content: flex-end;
@@ -43,7 +52,7 @@
   flex: 0 0 auto;
 }
 
-.home-page .div {
+.div {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -57,7 +66,7 @@
   font-style: var(--body-text-font-style);
 }
 
-.home-page .header-section {
+.header-section {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
@@ -71,7 +80,7 @@
   position: relative;
 }
 
-.home-page .header-content {
+.header-content {
   flex-direction: column;
   min-width: 320px;
   max-width: 620px;
@@ -83,7 +92,7 @@
   position: relative;
 }
 
-.home-page .title-subtitle {
+.title-subtitle {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -94,7 +103,7 @@
   align-self: stretch;
 }
 
-.home-page .text-wrapper-2 {
+.text-wrapper-2 {
   position: relative;
   align-self: stretch;
   margin-top: -1px;
@@ -107,7 +116,7 @@
   font-style: var(--subtitle-font-style);
 }
 
-.home-page .text-wrapper-3 {
+.text-wrapper-3 {
   position: relative;
   align-self: stretch;
   font-family: var(--h1-font-family);
@@ -119,7 +128,7 @@
   font-style: var(--h1-font-style);
 }
 
-.home-page .text-wrapper-4 {
+.text-wrapper-4 {
   font-weight: var(--body-text-font-weight);
   font-size: var(--body-text-font-size);
   line-height: var(--body-text-line-height);
@@ -131,7 +140,7 @@
   font-style: var(--body-text-font-style);
 }
 
-.home-page .button {
+.button {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -142,7 +151,7 @@
   background-color: #2d2d2d;
 }
 
-.home-page .text-wrapper-5 {
+.text-wrapper-5 {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -156,7 +165,7 @@
   white-space: nowrap;
 }
 
-.home-page .headerimage {
+.headerimage {
   position: relative;
   flex: 1;
   min-width: 320px;
@@ -165,14 +174,14 @@
   height: 360px;
 }
 
-.home-page .logo-bar {
+.logo-bar {
   position: relative;
   align-self: stretch;
   width: 100%;
   flex: 0 0 auto;
 }
 
-.home-page .div-2 {
+.div-2 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -185,7 +194,7 @@
   background-color: var(--white);
 }
 
-.home-page .cards-section {
+.cards-section {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -196,7 +205,7 @@
   flex: 0 0 auto;
 }
 
-.home-page .skills-card {
+.skills-card {
   display: flex;
   flex-direction: column;
   min-width: 320px;
@@ -210,13 +219,13 @@
   background-color: #ffffff;
 }
 
-.home-page .skills-card-icon {
+.skills-card-icon {
   position: relative;
   width: 124px;
   height: 124px;
 }
 
-.home-page .div-3 {
+.div-3 {
   gap: 12px;
   display: flex;
   flex-direction: column;
@@ -227,7 +236,7 @@
   flex: 0 0 auto;
 }
 
-.home-page .title {
+.title {
   height: 42px;
   margin-top: -1px;
   font-family: var(--h3-font-family);
@@ -243,7 +252,7 @@
   font-style: var(--h3-font-style);
 }
 
-.home-page .p {
+.p {
   position: relative;
   align-self: stretch;
   font-family: var(--body-text-font-family);
@@ -256,19 +265,19 @@
   font-style: var(--body-text-font-style);
 }
 
-.home-page .img {
+.img {
   height: 124px;
   position: relative;
   width: 127.38px;
 }
 
-.home-page .skills-card-icon-2 {
+.skills-card-icon-2 {
   height: 127.38px;
   position: relative;
   width: 127.38px;
 }
 
-.home-page .text-wrapper-6 {
+.text-wrapper-6 {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -283,7 +292,7 @@
   font-style: var(--h2-font-style);
 }
 
-.home-page .div-4 {
+.div-4 {
   display: flex;
   flex-direction: column;
   min-width: 320px;
@@ -294,7 +303,7 @@
   flex-grow: 1;
 }
 
-.home-page .image {
+.image {
   position: relative;
   align-self: stretch;
   width: 100%;
@@ -302,7 +311,7 @@
   object-fit: cover;
 }
 
-.home-page .title-description {
+.title-description {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -313,7 +322,7 @@
   align-self: stretch;
 }
 
-.home-page .testimonial-card {
+.testimonial-card {
   display: flex;
   flex-direction: column;
   min-width: 320px;
@@ -326,7 +335,7 @@
   background-color: #f3f3f3;
 }
 
-.home-page .client-image-info {
+.client-image-info {
   display: flex;
   align-items: flex-start;
   gap: 16px;
@@ -336,14 +345,14 @@
   flex: 0 0 auto;
 }
 
-.home-page .client-image {
+.client-image {
   position: relative;
   width: 50px;
   height: 50px;
   object-fit: cover;
 }
 
-.home-page .client-info-stars {
+.client-info-stars {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -353,7 +362,7 @@
   flex-grow: 1;
 }
 
-.home-page .stars {
+.stars {
   display: inline-flex;
   align-items: flex-start;
   gap: 6px;
@@ -361,13 +370,13 @@
   flex: 0 0 auto;
 }
 
-.home-page .star {
+.star {
   position: relative;
   width: 20px;
   height: 20px;
 }
 
-.home-page .star-2 {
+.star-2 {
   position: absolute;
   width: 17px;
   height: 16px;
@@ -375,7 +384,7 @@
   left: 2px;
 }
 
-.home-page .name-company {
+.name-company {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -385,7 +394,7 @@
   flex: 0 0 auto;
 }
 
-.home-page .contact-section {
+.contact-section {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -398,7 +407,7 @@
   background-color: #ffffff;
 }
 
-.home-page .text-wrapper-7 {
+.text-wrapper-7 {
   position: relative;
   width: 626px;
   margin-top: -1px;
@@ -411,7 +420,7 @@
   font-style: var(--h2-font-style);
 }
 
-.home-page .contact-section-2 {
+.contact-section-2 {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -422,7 +431,7 @@
   flex: 0 0 auto;
 }
 
-.home-page .contact-info {
+.contact-info {
   display: flex;
   flex-direction: column;
   min-width: 320px;
@@ -433,7 +442,7 @@
   flex-grow: 1;
 }
 
-.home-page .div-wrapper {
+.div-wrapper {
   gap: 42px;
   display: flex;
   flex-direction: column;
@@ -444,7 +453,7 @@
   flex: 0 0 auto;
 }
 
-.home-page .text-wrapper-8 {
+.text-wrapper-8 {
   margin-top: -1px;
   font-weight: var(--body-text-font-weight);
   font-size: var(--body-text-font-size);
@@ -457,7 +466,7 @@
   font-style: var(--body-text-font-style);
 }
 
-.home-page .social-links {
+.social-links {
   display: flex;
   align-items: flex-start;
   gap: 24px;
@@ -467,13 +476,13 @@
   flex: 0 0 auto;
 }
 
-.home-page .img-2 {
+.img-2 {
   position: relative;
   width: 36px;
   height: 36px;
 }
 
-.home-page .contact-form {
+.contact-form {
   display: flex;
   flex-direction: column;
   min-width: 320px;
@@ -485,7 +494,7 @@
   flex-grow: 1;
 }
 
-.home-page .input-field {
+.input-field {
   min-width: 320px;
   max-width: 520px;
   padding: 16px 24px;
@@ -506,7 +515,7 @@
   font-style: var(--body-text-font-style);
 }
 
-.home-page .contact-wrapper {
+.contact-wrapper {
   display: inline-flex;
   align-items: center;
   justify-content: center;
